--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -3,4 +3,5 @@
 @import './template/index.css';
 @import './vendors/index.css';
 @import './tailwind/index.css';
-@import './docs/index.css'
+@import './docs/index.css';
+@import './custom/custom.css'
