--- a/src/assets/styles/custom/custom.css
+++ b/src/assets/styles/custom/custom.css
@@ -1,3 +1,5 @@
+@import '../../../../node_modules/react-big-calendar/lib/css/react-big-calendar.css';
+@import '../../../../node_modules/react-big-calendar/lib/addons/dragAndDrop/styles.css';
 .invite-form input {
     margin-top: .6rem;
 }
