--- a/src/views/project/ProjectList/index.css
+++ b/src/views/project/ProjectList/index.css
@@ -3,15 +3,19 @@
 }
 
 .control-class{
-    width: 50%;
-    font-size: 10px;
+   
+   font-size: 10px;
     justify-content: center;
     align-items: center;
     display: flex;
     padding-top: 4px;
-    border-color: blue;
+    border-color: #1948b3;
+    color: #1948b3;
 }
 .menu-class{
     width: 100px;
     margin-top: 0.5rem;
+}
+.sd-root-modern{
+    background-color: #fff !important;
 }
